fix: background body and visible reset button when score > 0

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   line-height: 1.3;
   background: radial-gradient(134.34% 134.34% at 50% 0%, hsl(214, 47%, 23%), hsl(237, 49%, 15%));
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   color: #fff;
 }
 
@@ -30,7 +30,7 @@ img {
   display: flex;
   flex-direction: column;
   max-width: 1300px;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0 auto;
   padding: 0 10px;
 }
